kubernetes/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "5"
    creationTimestamp: "2024-03-14T16:38:31Z"
    generation: 10
    labels:
      app: uebung
    name: uebung
    namespace: uebung
    resourceVersion: "35210"
    uid: b98f2de8-fb99-45a6-9c4a-8a7f98827b06
  spec:
    progressDeadlineSeconds: 600
    replicas: 6
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: uebung
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: uebung
      spec:
        containers:
        - image: ghcr.io/jeresten/kubernetes_uebung/kubernetes_uebung:latest
          imagePullPolicy: Always
          name: kubernetes-uebung-tqvwx
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: regcred
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 6
    conditions:
    - lastTransitionTime: "2024-03-14T17:50:41Z"
      lastUpdateTime: "2024-03-14T17:50:41Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2024-03-14T17:46:20Z"
      lastUpdateTime: "2024-03-14T17:56:44Z"
      message: ReplicaSet "uebung-66bcd8945d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 10
    readyReplicas: 6
    replicas: 6
    updatedReplicas: 6
kind: List
metadata:
  resourceVersion: ""
