kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uebung-service
  labels:
    app: uebung
spec:
  type: NodePort
  selector:
    app: uebung
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
